# pulse

./: AI_OUTPUT_RESULTS.md  CHECK_AI_DATA.md  COMMIT_AND_DEPLOY.sh  DEPLOYMENT.md  DEPLOYMENT_CHANGES.md  IMAGE_MERGING_FEATURE.md  IMAGE_PROCESSING_UPDATE.md  IMAGE_SIZE_FIX.md  QUICK_START.md  README.md  SUBMISSION_ERROR_FIX.md  deploy.sh  diagnose_connection.js  main.py  manual_push.sh  push_now.sh  push_to_github.sh  status_check.html  test_ai_output.py  test_connection.html  test_frontend_api_calls.html  test_frontend_backend_connection.html  test_roles.py  test_simple_connection.html
backend/: .dockerignore  .env.example  DEPLOYMENT_ALTERNATIVES.md  Dockerfile  Procfile  README.md  ai_service_with_gemini.py  app_minimal.py  app_new.py  app_simple.py  check_routes.py  deploy_cli.ps1  deploy_cli.sh  deploy_new.md  env.example  main.py  pyproject.toml  railway.json  render.yaml  requirements-railway.txt  requirements-render.txt  requirements.txt  simple_main.py  simple_test.py  start.py  start_ai_backend.py  start_simple.py  test_ai_simple.py  test_gemini_key.py  test_server.py
backend/app/: main.py
backend/models/: schemas.py
backend/routers/: __init__.py  admin.py  documents.py  users.py
backend/services/: __init__.py  ai_service_old.py  ai_service_simple.py  database.py
frontend/: .env  netlify.toml  package-lock.json  package.json  vercel.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  ConnectionTest.tsx  DirectConnectionTest.tsx  EnvironmentTest.tsx  simple-test.tsx  test-connection.js  test-database.tsx  test-supabase.tsx
(+34 files in other folders)
